@@ -1,6 +1,12 @@
 2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/maemo/new.py:
+	* python/mushin/maemo/start.py:
+	  Only allow updating when the thing is fully loaded.
+
+2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/maemo/new.py:
 	  Turn off autocapitalization on add project/context/status.
 
 2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
